Fixing the spacing
Really need to try a few resolutions when just working at home

--- a/css/browser.css
+++ b/css/browser.css
@@ -193,7 +193,7 @@ tr.shown td.details-control {
     background: url('../images/details_close.png') no-repeat center center;
 }
 #gamecard{
-    margin-left: 5%;
+    margin-left: 4%;
 	padding: 10;
 	padding-right: 0;
     float: left;
